--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Fredoka:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <title>AdoPETme</title>
 </head>
 
